--- a/docs/trim1/8_prototipo_no_funcional/css/styles.css
+++ b/docs/trim1/8_prototipo_no_funcional/css/styles.css
@@ -1,29 +1,56 @@
 *{
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
-.caja-padre{
-    padding: 20px;
-    background:palevioletred;
-    height: 100px;
+.borde{
+    border: 1px solid gray;
 }
-.caja1 {
+.titulo{
+    height: 70px;
+}
+/*  */
+/* layout:maquetacion */
+/*  */
+/* contenedor */
+.contenedor{
+    width: 90%;
+    max-width: 1280px;
+    margin:auto;
+}
+
+/* Navegador */
+nav{
+    width: 100%;
+    height: 70px;
+}
+
+/* logo */
+.logo {
     width: 20%;
-    height: 100px;
-    border: 2px solid black;
-    background-color: aquamarine;
+    height: 100%;
     float: left;
 }
-.caja2 {
+
+/* menu */
+.menu {
     width: 65%;
-    height: 100px;
-    border: 2px solid black;
-background-color: azure;
-float: left;
+    height: 100%;
+   float: left;
 }
-.caja3{
+
+/* ingreso */
+.ingreso{
     width: 15%;
-    height: 100px;
-    border: 2px solid black;
-background-color: beige;
-float: left;
+    height: 100%;
+    float: left;
+}
+/* encabezado y secciones */
+header,section{
+    height: 700px;
+}
+/* pie de pagina */
+footer{
+    width: 100%;
+    height: 70px;
 }
