--- a/docs/trim1/8_prototipo_no_funcional/css/styles.css
+++ b/docs/trim1/8_prototipo_no_funcional/css/styles.css
@@ -31,11 +31,26 @@ nav{
     height: 100%;
     float: left;
 }
+.logo img{
+    width: 60%;
+    height: 120%;
+    border-radius: 50%;
+}
+.card img{
+    width: 100%;
+    height: 100%;
+}
+
+.card{
+    width: 10%;
+    height: 10%;
+}
 
 /* menu */
 .menu {
     width: 65%;
     height: 100%;
+    background-color:#FF6712;
    float: left;
 }
 
@@ -48,6 +63,64 @@ nav{
 /* encabezado y secciones */
 header,section{
     height: 700px;
+}
+.color-gris-oscuro{
+    background:#35363A;
+}
+.gris-claro{
+    background-color: #5F6368;
+}
+.color-blanco{
+    background-color: white;
+}
+.color-titulo{
+    background-color: black;
+}
+/* portafolio */
+.portafolio{
+    background-color:#FF6712 ;
+}
+.port-col{
+    width: 33.33%;
+    height: 100%;
+    float:left ;
+    padding: 20px;
+    text-align: center;
+}
+.port-col img{
+    width: 200px;;
+    height:200px;
+}
+/* nosotros */
+.nos-fila{
+    width: 100%;
+    height:33.33%;
+}
+.nos-col-ext{
+    width: 40%;
+    height: 100%;
+    float: left;
+}
+.nos-col-cnt{
+    width: 20%;
+    height: 100%;
+    float: left;
+    text-align: center;
+    padding:25px;
+}
+/* contactetonos */
+.cont-col{
+    width: 50%;
+    height: 100%;
+    float: left;
+}
+.cont-fila-arr{
+    width: 100%;
+    height: 70%;
+}
+.cont-fila-abj{
+    width: 100%;
+    height: 30%;
 }
 /* pie de pagina */
 footer{
