--- a/docs/trim1/8_prototipo_no_funcional/css/styles.css
+++ b/docs/trim1/8_prototipo_no_funcional/css/styles.css
@@ -4,14 +4,380 @@
     padding: 0;
 }
 .borde{
-    border: 1px solid gray;
+    border: 1px solid gray;}
+/*  */
+/*  */
+/* ------------------------------------------------------------------------------------- */
+/* CLASES ESPECIALES ------------------------------------------------------------------- */
+/* ------------------------------------------------------------------------------------- */
+/* Selector Universal */
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
+/* Cuerpo */
+body{
+    background: #ddd;
+}
+/* Borde */
+.borde{
+    border: 1px solid #CCC;
+}
+/* Fondo color Negro */
+.color-negro{
+    background: #000;
+}
+/* Fondo color gris oscuro */
+.color-gris-oscuro{
+    background: #777777;
+}
+/* Fondo color gris claro */
+.color-gris-claro{
+    background: #AAAAAA;
+}
+/* Fondo color blanco */
+.color-blanco{
+    background: #FFF;
+}
+/* ------------------------------------------------------------------------------------- */
+/* FUENTES: ROBOTO Y YANONE ------------------------------------------------------------ */
+/* ------------------------------------------------------------------------------------- */
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz&display=swap');
+/*  */
+/* titulo subtitulo y tales */
+/* Títulos */
 .titulo{
     height: 70px;
+    background: #343A40;
+    font-family: 'Yanone Kaffeesatz', sans-serif;
+    color: #FFF;
+    text-align: center;
+    padding: 20px;
+    clear: both;}
+/*  */
+/* Subtítulos */
+.subtitulo{
+    font-family: 'Roboto', sans-serif;
+    background: #CCC;
+    text-align: center;
+    padding: 10px;
+    border-radius: 5px 5px 0 0;
 }
-/*  */
-/* layout:maquetacion */
-/*  */
+/* Párrafos */
+.parrafo{
+    font-family: 'Roboto', sans-serif;
+    text-align: justify;
+    padding: 10px;
+}
+/* ------------------------------------------------------------------------------------- */
+/* IMÁGENES ---------------------------------------------------------------------------- */
+/* ------------------------------------------------------------------------------------- */
+.imagen{
+	text-align: center;
+    padding: 10px;
+}
+.imagen img{	
+	width: 150px;
+    height: auto;	
+}
+/* ------------------------------------------------------------------------------------- */
+/* BOTONES DE ENLACE ------------------------------------------------------------------- */
+/* ------------------------------------------------------------------------------------- */
+.ver{
+	font-family: 'Yanone Kaffeesatz', sans-serif;
+    background: #CCC;
+    text-align: center;
+    padding: 10px;
+    border-radius: 0 0 5px 5px;
+}
+.ver a{
+    display: block;
+    width: 50%;
+    margin: auto;
+	text-decoration: none;
+	color: #EEE;
+	background: #2A5159;
+    padding: 10px;
+	border-radius: 5px;
+}
+.ver a:hover{
+	background: rgba(30, 30, 30, 0.5);
+}
+
+/* ------------------------------------------------------------------------------------- */
+/* UBICACIÓN ESPACIO TEMPORAL ---------------------------------------------------------- */
+/* ------------------------------------------------------------------------------------- */
+.espacio-temporal{
+    font-family: 'Roboto', sans-serif;
+    font-size: 0.8em;
+    text-align: center;
+    border-bottom: 1px solid #CCC;
+}
+/* ------------------------------------------------------------------------------------- */
+/* SOCIAL MEDIA ------------------------------------------------------------------------ */
+/* ------------------------------------------------------------------------------------- */
+.social-media{
+    padding: 10px;
+    text-align: center;
+}
+.social-media a{
+    color: #000;
+    font-size: 3em;
+    padding: 0 5px 0 5px;
+}
+.social-media a:hover{
+    color: #FFF;
+}
+
+/* ------------------------------------------------------------------------------------- */
+/* ---------------------------- II. LAYOUT: MAQUETACIÓN WEB ---------------------------- */
+/* ------------------------------- ESCRITORIO Y PORTATIL ------------------------------- */
+/* ------------------------------------------------------------------------------------- */
+/* Contenedor */
+.contenedor{
+    width: 95%;
+    max-width: 1280px;
+    margin: auto;
+    border-top: 0;
+}
+/* Navegador */
+nav{
+    width: 100%;
+    height: 50px;
+    border-bottom: 1px solid gray;
+}
+/* Logo */
+.logo{
+    width: 20%;
+    height: 100%;        
+    float: left;
+}
+.logo img{
+    width: 100%;
+    height: 100%;
+}
+/* Menú */
+.menu{
+    width: 65%;
+    height: 100%;
+    background: #EF8814;
+    float: left;
+}
+/* Ingreso */
+.ingreso{
+    width: 15%;
+    height: 100%;    
+    float: left;
+}
+/* Encabezado */
+header{
+    height: 90vh;
+    background-image: url(../img/oekd.png);
+    background-size: 100%;
+    background-attachment: fixed;
+}
+/* Portafolio */
+.portafolio{
+    height: auto;
+}
+.port-col-izq,
+.port-col-cnt,
+.port-col-der{
+    width: 33.33%;
+    height: 100%;
+    padding: 20px;
+    float: left;
+}
+.portafolio img{
+    width: 200px;
+}
+/* Nosotros */
+.nosotros{
+    width: 100%;
+    height: 90vh;
+}
+.nos-fila{
+    width: 100%;
+    height: 33.33%;
+}
+.nos-col-izq{
+    width: 40%;
+    height: 100%;
+    float: left;
+}
+.nos-col-der{
+    width: 40%;
+    height: 100%;
+    float: left;
+}
+.nos-col-cnt{
+    width: 20%;
+    height: 100%;
+    padding: 20px;
+    text-align: center;
+    float: left;
+}
+.nosotros img{
+    border-radius: 50%;
+}
+.nosotros .nos-col-izq .subtitulo,
+.nosotros .nos-col-izq .parrafo{
+    text-align: right;
+}
+.nosotros .nos-col-izq a{
+    margin-right: 0;
+}
+.nosotros .nos-col-der .subtitulo,
+.nosotros .nos-col-der .parrafo{
+    text-align: left;
+}
+.nosotros .nos-col-der a{
+    margin-left: 0;
+}
+/* Contáctenos */
+.contactenos{
+    height: 90vh;
+}
+.cont-col-izq,
+.cont-col-der{
+    width: 50%;
+    height: 100%;
+    float: left;
+}
+.cont-col-der .cont-fila-arr{
+    width: 100%;
+    height: 70%;
+}
+.cont-fila-arr iframe{
+    width: 100%;
+    height: 100%;
+    border: 0;
+}
+.cont-fila-abj{
+    width: 100%;
+    height: 30%;
+    padding: 10px;
+}
+
+/* Pie de Página */
+footer{
+    width: 100%;
+    height: 70px;
+    padding:10px ;
+}
+footer.parrafo{
+    text-align: center;
+    color:#FFF;
+    font-size: 0.7em;    
+}
+
+/* ------------------------------------------------------------------------------------- */
+/* ------------------------------ III. RESPONSIVE DESIGN ------------------------------- */
+/* -------------------------------------- TABLETS -------------------------------------- */
+/* ------------------------------------------------------------------------------------- */
+@media (max-width: 992px){
+    /* Contenedor */
+.contenedor{
+    width: 100%;
+}
+}
+/* Navegador */
+nav{
+    height: 150px;
+}
+/* Logo */
+.logo{
+    width: 100%;
+    height: 66.66%;        
+}
+/* Menú */
+.menu{
+    width: 80%;
+    height: 33.33%;
+}
+/* Ingreso */
+.ingreso{
+    width: 20%;
+    height: 33.33%;    
+}
+/* Portafolio */    
+.port-col-izq{
+    width: 100%;
+    height: 50%;        
+}
+.port-col-cnt,
+.port-col-der{
+    width: 50%;
+    height: 50%;
+}    
+.portafolio img{
+    width: 100px;
+}
+/* Nosotros */    
+.nos-fila-arr,
+.nos-fila-cnt,
+.nos-fila-abj{
+    width: 100%;
+    height: 33.33%;
+}
+.nos-fila-arr .nos-col-der,
+.nos-fila-abj .nos-col-der{
+    display: none;
+}
+.nos-fila-arr .nos-col-izq,
+.nos-fila-abj .nos-col-izq{
+    width: 70%;
+}
+.nos-fila-arr .nos-col-cnt,
+.nos-fila-abj .nos-col-cnt{
+    width: 30%;
+    background: #FFF;
+}
+.nos-fila-cnt .nos-col-izq{
+    display: none;
+}
+.nos-fila-cnt .nos-col-cnt{
+    width: 30%;
+}
+.nos-fila-cnt .nos-col-der{
+    width: 70%;
+}    
+/* Contáctenos */    
+.cont-col-izq{
+    width: 100%;
+    height: 50%;
+}
+.cont-col-der{
+    width: 100%;
+    height: 50%;        
+}
+.cont-col-der .cont-fila-arr,
+.cont-col-der .cont-fila-abj{
+    width: 50%;
+    height: 100%;
+    float: left;
+}
+.cont-fila-arr iframe{
+    width: 100%;
+    height: 100%;
+    border: 0;
+}
+.cont-fila-abj .espacio-temporal{
+    height: 70%;
+    padding-top: 60px;
+}
+.cont-fila-abj .social-media{
+    height: 30%;
+    padding-top: 25px;
+}        
+
+/* ------------------------------------------------------------------------------------- */
+/* ------------------------------- IV. RESPONSIVE DESIGN ------------------------------- */
+/* ------------------------------------- CELULARES ------------------------------------- */
+/* ------------------------------------------------------------------------------------- */
+
 /* contenedor */
 .contenedor{
     width: 90%;
@@ -20,7 +386,7 @@
 }
 
 /* Navegador */
-nav{
+.nav{
     width: 100%;
     height: 70px;
 }
@@ -60,26 +426,8 @@ nav{
     height: 100%;
     float: left;
 }
-/* encabezado y secciones */
-header,section{
-    height: 700px;
-}
-.color-gris-oscuro{
-    background:#35363A;
-}
-.gris-claro{
-    background-color: #5F6368;
-}
-.color-blanco{
-    background-color: white;
-}
-.color-titulo{
-    background-color: black;
-}
+
 /* portafolio */
-.portafolio{
-    background-color:#FF6712 ;
-}
 .port-col{
     width: 33.33%;
     height: 100%;
